--- a/index.css
+++ b/index.css
@@ -8,23 +8,23 @@ body {
   margin-top: 100px;
   font-family: "Outfit";
 }
-.container {
+.nft-card {
   width: 500px;
   height: 800px;
   border-radius: 10px;
   background-color: hsl(215, 32%, 27%);
   display: flex;
-  box-shadow: 10px 10x 10px rgba(13, 25, 45, 1);
+  box-shadow: 25px 25px 25px 25px rgba(13, 25, 43, 1);
   flex-direction: column;
 }
-.image-container {
+.nft-image-cont {
   width: 90%;
   height: 50%;
   margin: 0 auto;
   margin-top: 20px;
   text-align: center;
 }
-.explanations-container {
+.nft-content {
   width: 90%;
   height: 30%;
   margin: 0 auto;
@@ -35,22 +35,22 @@ body {
   height: 400px;
   border-radius: 10px;
 }
-.time-container {
+.nft-info {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
   height: 50px;
 }
-.first-p {
+.nft-title {
   color: white;
   font-size: 26px;
   font-weight: 600;
 }
-.second-p {
+.nft-description {
   color: rgb(201, 201, 201);
   font-size: 24px;
 }
-.mini-time {
+.nft-price {
   width: 50%;
   display: flex;
   gap: 10px;
@@ -68,7 +68,7 @@ body {
   align-items: center;
   margin-top: 10px;
 }
-.mini-time-2 {
+.nft-time {
   width: 50%;
   display: flex;
   gap: 10px;
@@ -85,7 +85,7 @@ body {
   margin-top: 10px;
 }
 hr {
-  border: 0.5px solid hsl(0, 0%, 96%);
+  border: 0.1px solid hsl(215, 51%, 70%);
   width: 90%;
   margin: 0 auto;
 }
@@ -94,15 +94,27 @@ hr {
   height: 70px;
   margin: 0 auto;
   display: flex;
-  margin-top: 20px;
+  margin-top: 13px;
   align-items: center;
   gap: 20px;
-  border: black solid 1px;
 }
 
 .profile-cont {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+}
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   border: black solid 1px;
+}
+.creator-text {
+  font-size: 20px;
+  color: hsl(215, 51%, 70%);
+}
+.creator-name {
+  font-size: 20px;
+  color: white;
 }
