--- a/index.css
+++ b/index.css
@@ -5,12 +5,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 200px;
   font-family: "Outfit";
 }
 .nft-card {
   width: 500px;
-  height: 800px;
+  height: 850px;
   border-radius: 10px;
   background-color: hsl(215, 32%, 27%);
   display: flex;
@@ -18,23 +18,24 @@ body {
   flex-direction: column;
 }
 .nft-image-cont {
-  width: 90%;
+  width: 85%;
   height: 50%;
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 30px;
   text-align: center;
 }
 .nft-content {
-  width: 90%;
+  width: 85%;
   height: 30%;
-  margin: 0 auto;
-  margin-top: 20px;
+  margin-left: 35px;
+  border: 1px solid red;
 }
 .image-equilibrium {
   width: 100%;
   height: 400px;
   border-radius: 10px;
 }
+
 .nft-info {
   display: flex;
   justify-content: space-evenly;
@@ -43,12 +44,15 @@ body {
 }
 .nft-title {
   color: white;
-  font-size: 26px;
-  font-weight: 600;
+  font-size: 32px;
+  font-weight: 700;
+  margin-top: 10px;
+  margin-bottom: 0;
 }
 .nft-description {
   color: rgb(201, 201, 201);
   font-size: 24px;
+  margin: 20px 0 0 0;
 }
 .nft-price {
   width: 50%;
